  select "Do not mirror this repository". In-line documentation has been
  updated. (RBL-1323)
* Usernames for rBuilder accounts follow new Conary restrictions. (RBL-1338)
* The "Notify All Users" functionality has been removed. (RBL-1370)
* In certain circumstances, rBuilder could set up an externa Update Service
  with the wrong hostname for mirror contents. This has been fixed. (RBL-1369)

Changes in 3.0.0
================

Features
--------
* rBuilder now supports Microsoft Virtual Hardware (VHD) as well as
  Virtual Iron build types. (RBL-1198)
* The "VMware Player Image" build type is now known as "VMware Virtual
  Appliance". (RBL-1274)
* Users who are currently building a group with Group Builder will have their
  package searches restricted to packages having the same namespace:tag
  (e.g. rpl:1) as the version of group-core currently included
  in the group they are building. (RBL-629)
* Inbound mirror operations may now be scheduled via rAA. (RBL-1157)
* Inbound and outbound mirror logging has been enhanced. (RBL-1242)
* It is now possible to delete multiple builds from the "manage builds"
  web interface. (RBL-1195)
* Project developers are now able to see unpublished releases in the
  Manage Releases page. (RBL-968)
* A number of speed improvements have been made to the repository
  browser. (RBL-1177)
* Download statistics are now available as a chart. (RBL-1213)
* The release description page now contains date/time information
  about a given release.

Fixes
-----
* The mirror preload operation now checks for sufficient free disk
  space before importing.  (RBL-1014)
* Maintenance mode no longer creates a redirect loop when attempting
  to access the web interface while logged in. (RBL-1028)
* The Cook Group button on the Edit Group page now saves any group recipe
  changes before cooking the group. (RBL-1085)
* It is no longer necessary to press shift-reload to properly refresh
  the page after upgrading rBuilder. (RBL-1017)